package co.edu.uniquindio.taller2.exceptions;

public class CuentaException extends java.lang.Exception {
	/**
	 * Es el constructor de la excepcion de las cuentas
	 *
	 * @param msg
	 */
	public CuentaException(String msg) {
		super(msg);
	}
}
